[package]
name = "job_scheduler_ng"
version = "2.3.0"
authors = ["Mathijs van Veluw <black.dex@gmail.com>"]
description = "A simple cron-like job scheduling library for Rust (Updated since 2022)."
documentation = "https://docs.rs/job_scheduler_ng/"
repository = "https://github.com/BlackDex/job_scheduler"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cron", "crontab", "scheduler", "job"]
categories = ["date-and-time"]
edition = "2021"
rust-version = "1.83.0"
# Only included needed files into the crate package
include = [
    "README.md",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**/*.rs"
]

[dependencies]
cron = "0.15.0"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
uuid = { version = "1.14.0", default-features = false, features = ["v4"] }

[dev-dependencies]
tokio = { version = ">=1.47", default-features = false, features = ["macros", "time", "rt-multi-thread"] }

# Linting config
# https://doc.rust-lang.org/rustc/lints/groups.html
[lints.rust]
# Forbid
unsafe_code = "forbid"
non_ascii_idents = "forbid"

# Deny
arithmetic_overflow = "deny"
deprecated_in_future = "deny"
deprecated_safe = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
let_underscore = { level = "deny", priority = -1 }
missing_copy_implementations = "deny"
nonstandard_style = { level = "deny", priority = -1 }
noop_method_call = "deny"
refining_impl_trait = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unknown_or_malformed_diagnostic_attributes = { level = "deny", priority = -2 }
unreachable_pub = "deny"
unstable_features = "deny"
unused = { level = "deny", priority = -1 }
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

# https://rust-lang.github.io/rust-clippy/stable/index.html
[lints.clippy]
# Warn
dbg_macro = "warn"
todo = "warn"

# Deny
bool_comparison = "deny"
clone_on_ref_ptr = "deny"
empty_structs_with_brackets = "deny"
equatable_if_let = "deny"
float_cmp_const = "deny"
indexing_slicing = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
manual_map = "deny"
mem_forget = "deny"
needless_lifetimes = "deny"
nonminimal_bool = "deny"
pedantic = { level = "deny", priority = -1 }
redundant_clone = "deny"
str_to_string = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_self_imports = "deny"
unwrap_used = "deny"
verbose_file_reads = "deny"
